@@ -139,6 +139,7 @@ David Alan Gilbert                  gilbertd@treblig.org
 David Dyck                          dcd@tc.fluke.COM
 David Eisner                        cradle@umd.edu
 David Flynn                         dav@chess.plus.com
+David Gast                          dgast@csulb.edu
 David Godfrey                       dave@delta.demon.co.uk
 David Luyer                         david_luyer@pacific.net.au
 David Madore                        david.madore@ens.fr
