@@ -66,6 +66,9 @@ GNU coreutils NEWS                                    -*- outline -*-
   df now supports disk partitions larger than 4 TiB on MacOS X 10.5
   or newer and on AIX 5.2 or newer.
 
+  join --check-order now prints "join: FILE:LINE_NUMBER: bad_line" for an
+  unsorted input, rather than e.g., "join: file 1 is not in sorted order".
+
   shuf outputs small subsets of large permutations much more efficiently.
   For example `shuf -i1-$((2**32-1)) -n2` no longer exhausts memory.
 
